Homepage fixed and added content

--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,8 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 0vh;
+  min-height: 0vh;
 }
 
 h1 {
