--- a/src/assets/styles/home/homeNavStyle.css
+++ b/src/assets/styles/home/homeNavStyle.css
@@ -23,7 +23,7 @@ a {
   color: #ffffff;
   vertical-align: top;
 }
-#menu.navbar-default .navbar-nav > li > a {
+#menu .navbar-default .navbar-nav > li > a {
   text-transform: uppercase;
   color: rgba(255, 255, 255, 0.7);
   font-size: 12px;
@@ -34,29 +34,29 @@ a {
   text-align: right;
   color: #26f900;
 }
-.on {
+#menu .on {
   background-color: #343b42 !important;
   padding: 0 !important;
 }
-.navbar-default .navbar-nav > .active > a,
+#menu .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   color: #ffffff !important;
   background-color: transparent;
 }
-.navbar-toggle {
+#menu .navbar-toggle {
   border-radius: 0;
 }
-.navbar-default .navbar-toggle:hover,
+#menu .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
   background-color: #414a52;
   border-color: #ffffff;
 }
-.navbar-default .navbar-toggle:hover > .icon-bar {
+#menu .navbar-default .navbar-toggle:hover > .icon-bar {
   background-color: #fff;
 }
 
-.navbar-collapse {
+#menu .navbar-collapse{
   padding-right: 15px;
   padding-left: 15px;
   overflow-x: visible;
@@ -65,26 +65,26 @@ a {
   -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
 }
-.navbar-collapse.in {
+#menu .navbar-collapse.in {
   overflow-y: auto;
 }
 @media (min-width: 768px) {
-  .navbar-collapse {
+  #menu .navbar-collapse {
     width: auto;
     border-top: 0;
     -webkit-box-shadow: none;
     box-shadow: none;
   }
-  .navbar-collapse.collapse {
+  #menu .navbar-collapse.collapse {
     display: block !important;
     height: auto !important;
     padding-bottom: 0;
     overflow: visible !important;
   }
-  .navbar-collapse.in {
+  #menu .navbar-collapse.in {
     overflow-y: visible;
   }
-  .navbar-fixed-top .navbar-collapse,
+  #menu .navbar-fixed-top .navbar-collapse,
   .navbar-static-top .navbar-collapse,
   .navbar-fixed-bottom .navbar-collapse {
     padding-right: 0;
@@ -92,28 +92,29 @@ a {
   }
 }
 
-.navbar-fixed-top .navbar-collapse,
+#menu .navbar-fixed-top .navbar-collapse,
 .navbar-fixed-bottom .navbar-collapse {
   max-height: 340px;
 }
 @media (max-device-width: 480px) and (orientation: landscape) {
-  .navbar-fixed-top .navbar-collapse,
+  #menu .navbar-fixed-top .navbar-collapse,
   .navbar-fixed-bottom .navbar-collapse {
     max-height: 200px;
   }
 }
 
-.navbar-nav {
+#menu .navbar-nav {
   margin: 7.5px -15px;
 }
-.navbar-nav > li > a {
+#menu .navbar-nav > li > a {
   padding-top: 10px;
   padding-bottom: 10px;
+  margin-left: 40px;
   line-height: 20px;
   cursor: pointer;
 }
 @media (max-width: 767px) {
-  .navbar-nav .open .dropdown-menu {
+  #menu .navbar-nav .open .dropdown-menu {
     position: static;
     float: none;
     width: auto;
@@ -123,48 +124,48 @@ a {
     -webkit-box-shadow: none;
     box-shadow: none;
   }
-  .navbar-nav .open .dropdown-menu > li > a {
+  #menu .navbar-nav .open .dropdown-menu > li > a {
     line-height: 20px;
   }
-  .navbar-nav .open .dropdown-menu > li > a:hover,
+  #menu .navbar-nav .open .dropdown-menu > li > a:hover,
   .navbar-nav .open .dropdown-menu > li > a:focus {
     background-image: none;
   }
 }
 @media (min-width: 768px) {
-  .navbar-nav {
+  #menu .navbar-nav {
     float: left;
     margin: 0;
   }
-  .navbar-nav > li {
+  #menu .navbar-nav > li {
     float: left;
   }
-  .navbar-nav > li > a {
+  #menu .navbar-nav > li > a {
     padding-top: 15px;
     padding-bottom: 15px;
   }
 }
 
 @media (min-width: 768px) {
-  .navbar-right .dropdown-menu {
+  #menu .navbar-right .dropdown-menu {
     right: 0;
     left: auto;
   }
-  .navbar-right .dropdown-menu-left {
+  #menu .navbar-right .dropdown-menu-left {
     right: auto;
     left: 0;
   }
 }
 
 @media (min-width: 768px) {
-  .navbar-left {
+  #menu .navbar-left {
     float: left !important;
   }
-  .navbar-right {
+  #menu .navbar-right {
     float: right !important;
     margin-right: -15px;
   }
-  .navbar-right ~ .navbar-right {
+  #menu .navbar-right ~ .navbar-right {
     margin-right: 0;
   }
 }
