--- a/src/assets/styles/indexmax/indexmaxS.css
+++ b/src/assets/styles/indexmax/indexmaxS.css
@@ -1,3 +1,4 @@
+
 body {
   background-color: #ffffff;
 }
@@ -20,13 +21,48 @@ body {
   background-size: cover;
   height: 100vh;   
 }
+#imageP{
+  text-align: left;
+  margin-top: 5px;
+}
+#imageP .imageP2{
+  width: 250px ;
+  height: auto ;
+  margin: 15px ;
+}
+#imageP .imageP1{
+  width: 70px ;
+  height: auto ;
+  margin: 5px ;
+
+}
 .Header-Navbar.Link{
   margin-right: 30px;
   color:#ffffff;
-  font: size 80px;
+  font: size 80px; 
 }
-.my-text{
+#my-text{
   text-align: left;
+}
+#my-text .T1{
+  transform: translate(-15%, 20%);
+}
+#my-text .T2{
+  transform: translate(-45%, 20%);
+}
+#my-text .T1c{
+  transform: translate(-15%, 75%);
+  font-size: 10px;
+  color: blue;
+}
+#my-text .T2T{
+  transform: translate(-45%, 20PX);
+  font-size: 12px;
+
+}
+.my-icontT{
+  transform: translate(-50px, 75%);
+  color: rgb(248, 167, 45);
 }
 .my-text-T{
   position: absolute;
