--- a/src/assets/styles/home/HomeCtStyle.css
+++ b/src/assets/styles/home/HomeCtStyle.css
@@ -1,5 +1,10 @@
 #contact {
-  padding: 120px 0 60px 0;
+  padding-top: 120px;
+  padding-bottom: 60px;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  justify-items: center;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#54d0dd+0,54d0dd+0,54d0dd+0,7fdce6+0,54d0dd+100 */
   background: rgb(0, 0, 0); /* Old browsers */
   background: -moz-linear-gradient(
@@ -11,7 +16,7 @@
     rgba(84, 208, 221, 1) 100%
   ); /* FF3.6-15 */
   background: -webkit-linear-gradient(
-    top,
+    top,60px
     rgba(84, 208, 221, 1) 0%,
     rgba(84, 208, 221, 1) 0%,
     rgba(84, 208, 221, 1) 0%,
@@ -28,25 +33,59 @@
   ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#54d0dd', endColorstr='#54d0dd', GradientType=0 ); /* IE6-9 */
 }
-#contact form {
-  padding: 30px 0;
+
+#contact .btn-default {
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: #414a52;
+  border: 0;
+  padding: 14px 20px;
+  margin: 0;
+  font-size: 16px;
+  border-radius: 0;
+  margin-top: 20px;
+  transition: all 0.3s;
 }
+
+#contact hr {
+  align-self: center;
+  width: 70px;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  position: relative;
+  left: 50%;
+  margin-left: -35px;
+  border: 0;
+  border-top: 3px solid #383838;
+}
+
+#contact h2 {
+  color: #383838;
+}
+
+#contact .contact-box {
+  align-items: center;
+  align-content: center;
+}
+
 #contact .text-danger {
   color: #cc0033;
-  text-align: left;
+  text-align: center;
 }
-#contact label {
-  font-size: 12px;
-  font-weight: 400;
-  font-family: "Open Sans", sans-serif;
-  float: left;
+
+#contact .mb-3 {
+  padding: 0;
+  margin: 0;
 }
+
 #contact .form-control {
-  display: block;
-  width: 100%;
-  padding: 6px 12px;
+  display: flex;
+  width: 60%;
+  margin-left: 20%;
+  padding: 20px 10px;
+  padding-bottom: 30px;
+  border: 0;
   font-size: 14px;
-  line-height: 1.42857143;
   color: #222;
   background-color: rgba(255, 255, 255, 0.8);
   background-image: none;
@@ -58,6 +97,7 @@
   -o-transition: none;
   transition: none;
 }
+
 #contact .form-control:focus {
   border-color: #4b8d98;
   outline: 0;
@@ -92,7 +132,7 @@
 #contact .social i.fa:hover {
   color: #fff;
 }
-.btn:active,
+#contact .btn:active,
 .btn.active {
   background-image: none;
   outline: 0;
