--- a/src/assets/styles/home/HomeHdStyle.css
+++ b/src/assets/styles/home/HomeHdStyle.css
@@ -10,19 +10,11 @@ body {
 #header .intro {
   background-image: url(../../img/head.jpg);
   height: auto;
+  width: auto;
   background-position: center;
   background-repeat: no-repeat;
   background-color: #e5e5e5;
   background-size: cover;
-}
-
-#header .intro-text {
-  padding-top: 250px;
-  padding-bottom: 200px;
-}
-
-#header .section-title.center {
-  padding: 0px 0 0px 0;
 }
 
 #header h1,
@@ -52,46 +44,6 @@ h3,
 #header .intro-text {
   padding-top: 250px;
   padding-bottom: 200px;
-}
-
-#header h2 {
-  margin: 0 0 20px 0;
-  font-weight: 400;
-  font-size: 36px;
-  color: #414a52;
-}
-#header h3,
-h4 {
-  font-size: 18px;
-  font-weight: 300;
-  letter-spacing: 1px;
-}
-#header h5 {
-  text-transform: uppercase;
-  font-weight: 700;
-  line-height: 20px;
-}
-
-#header button {
-  overflow: visible;
-  text-transform: none;
-  cursor: pointer;
-  margin: 0;
-  font: inherit;
-  color: inherit;
-}
-#header button[disabled],
-html input[disabled] {
-  cursor: default;
-}
-#header button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
-#header p.intro {
-  font-size: 16px;
-  margin: 12px 0 0;
-  line-height: 24px;
 }
 
 #header .btn-custom {
