--- a/src/assets/styles/home/HomeFtStyle.css
+++ b/src/assets/styles/home/HomeFtStyle.css
@@ -1,13 +1,14 @@
 #footer {
-    background: #343b42;
-    color: rgba(255, 255, 255, 0.4);
+    background: #484a4d;
+    color: rgba(247, 247, 247, 0.4);
     padding: 30px 0 25px 0;
   }
   #footer p {
     font-size: 13px;
+    color: aliceblue;
   }
   #footer a {
-    color: rgba(255, 255, 255, 0.7);
+    color: aliceblue;
   }
   #footer a:hover {
     color: #54d0dd;
