--- a/src/assets/styles/home/HomePfStyle.css
+++ b/src/assets/styles/home/HomePfStyle.css
@@ -60,16 +60,22 @@
   width: 20rem;
   padding: 0px;
   cursor: pointer;
+  background: #4ea153;
 }
 
 #portfolio .type Button {
   -webkit-transition-duration: 0.5s;
   -moz-transition-duration: 0.5s;
   transition-duration: 0.5s;
+  background: #999999;
 }
 
 #portfolio i.fa {
   font-size: 20px;
   padding: 5px;
-  color: #e87e04;
+  color: #000000;
+}
+
+#Card.Headerr{
+background:#f39e9e;
 }
