--- a/src/assets/styles/home/HomeHdStyle.css
+++ b/src/assets/styles/home/HomeHdStyle.css
@@ -8,7 +8,7 @@ body {
 }
 /* Navigation */
 #header .intro {
-  background-image: url(../../img/head.jpg);
+  background-image: url(../../img/head.webp);
   height: auto;
   width: auto;
   background-position: center;
