--- a/src/assets/styles/indexmax/HeaderMaxS.css
+++ b/src/assets/styles/indexmax/HeaderMaxS.css
@@ -1,10 +1,10 @@
-.Header-Navbar-1{
+#headermax .Header-Navbar-1{
     padding: 0;
     margin-top: 0;
     position: relative ;
     z-index: 0 ;
   }
-.my-text-T{
+  #headermax .my-text-T{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -12,7 +12,7 @@
     text-align: center;
     font-display: swap
   }
-#image{ 
+  #headermax .image { 
     background-image:linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.3)), url(/images/bg_3.webp);
     background-position: center ;
     width: 100%;
