--- a/src/assets/styles/home/HomeAbStyle.css
+++ b/src/assets/styles/home/HomeAbStyle.css
@@ -4,28 +4,28 @@
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#54d0dd+0,54d0dd+0,54d0dd+0,7fdce6+0,54d0dd+100 */
   background: rgb(0, 0, 0); /* Old browsers */
   background: -moz-linear-gradient(
-    top,
-    rgba(0, 0, 0) 0%,
-    rgba(0, 0, 0) 0%,
+    bottom,
     rgba(0, 0, 0, 0) 0%,
     rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 1) 100%
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(43, 54, 65, 1) 50%
   ); /* FF3.6-15 */
   background: -webkit-linear-gradient(
-    top,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0) 100%
+    to bottom,60px
+    rgba(27, 55, 87, 1) 0%,
+    rgba(27, 55, 87, 1) 0%,
+    rgba(27, 55, 87, 1) 0%,
+    rgba(27, 55, 87, 1) 0%,
+    rgba(27, 55, 87, 1) 100%
   ); /* Chrome10-25,Safari5.1-6 */
   background: linear-gradient(
-    to bottom,
-    rgba(176, 176, 176) 0%,
-    rgba(176, 176, 176) 0%,
-    rgba(176, 176, 176) 0%,
-    rgba(176, 176, 176) 0%,
-    rgba(176, 176, 176) 100%
+    to top,
+    rgba(43, 54, 65, 1) 0%,
+    rgba(43, 54, 65, 1) 0%,
+    rgba(43, 54, 65, 1) 0%,
+    rgba(43, 54, 65, 1) 30%,
+    rgb(173, 203, 241) 100%
   ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#54d0dd', endColorstr='#54d0dd', GradientType=0 ); /* IE6-9 */
 }
@@ -77,6 +77,9 @@ h3::selection {
 .btn-lg.active {
   color: #26f900;
   background-color: #414a52;
+}
+#about .btn-lg {
+  border-radius: 10px;
 }
 
 #about img {
