--- a/src/assets/styles/home/HomePfStyle.css
+++ b/src/assets/styles/home/HomePfStyle.css
@@ -1,15 +1,15 @@
 #portfolio {
   padding: 60px 0;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#54d0dd+0,54d0dd+0,54d0dd+0,71777d+0,414a52+100 */
-  background: rgb(84, 208, 221); /* Old browsers */
-  background: -moz-linear-gradient(
+  background: rgb(43, 54, 65); /* Old browsers */
+ /* background: -moz-linear-gradient(
     top,
     rgba(84, 208, 221, 1) 0%,
     rgba(84, 208, 221, 1) 0%,
     rgba(84, 208, 221, 1) 0%,
     rgba(113, 119, 125, 1) 0%,
     rgba(65, 74, 82, 1) 100%
-  ); /* FF3.6-15 */
+  ); /* FF3.6-15 
   background: -webkit-linear-gradient(
     top,
     rgba(84, 208, 221, 1) 0%,
@@ -17,7 +17,7 @@
     rgba(84, 208, 221, 1) 0%,
     rgba(113, 119, 125, 1) 0%,
     rgba(65, 74, 82, 1) 100%
-  ); /* Chrome10-25,Safari5.1-6 */
+  ); /* Chrome10-25,Safari5.1-6 
   background: linear-gradient(
     to bottom,
     rgba(84, 208, 221, 1) 0%,
@@ -25,12 +25,12 @@
     rgba(84, 208, 221, 1) 0%,
     rgba(113, 119, 125, 1) 0%,
     rgba(65, 74, 82, 1) 100%
-  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  );*/ /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#54d0dd', endColorstr='#414a52', GradientType=0 ); /* IE6-9 */
 }
 
 #portfolio h2 {
-  color: #181818;
+  color: #ffff;
 }
 
 #portfolio hr {
