--- a/src/assets/styles/home/HomeAbStyle.css
+++ b/src/assets/styles/home/HomeAbStyle.css
@@ -2,31 +2,32 @@
   padding: 50px 0;
   text-align: left;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#54d0dd+0,54d0dd+0,54d0dd+0,7fdce6+0,54d0dd+100 */
-  background: rgb(0, 0, 0); /* Old browsers */
-  background: -moz-linear-gradient(
-    bottom,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(0, 0, 0, 0) 0%,
-    rgba(43, 54, 65, 1) 50%
-  ); /* FF3.6-15 */
+  background: rgb(245, 241, 241); /* Old browsers */
+  /*background: -moz-linear-gradient(
+    top,
+    rgb(245, 246, 247) 0%,
+    rgb(245, 246, 247) 0%,
+    rgb(245, 246, 247) 0%,
+    rgb(245, 246, 247) 0%,
+    rgb(245, 246, 247) 100%
+  ); /* FF3.6-15 
   background: -webkit-linear-gradient(
-    to bottom,60px
-    rgba(27, 55, 87, 1) 0%,
-    rgba(27, 55, 87, 1) 0%,
-    rgba(27, 55, 87, 1) 0%,
-    rgba(27, 55, 87, 1) 0%,
-    rgba(27, 55, 87, 1) 100%
-  ); /* Chrome10-25,Safari5.1-6 */
+    to top,60px
+    rgb(248, 248, 249) 0%,
+    rgb(248, 248, 249) 0%,
+    rgb(248, 248, 249) 0%,
+    rgb(248, 248, 249) 0%,
+    rgb(248, 248, 249) 100%,
+  ); /* Chrome10-25,Safari5.1-6 
   background: linear-gradient(
-    to top,
-    rgba(43, 54, 65, 1) 0%,
-    rgba(43, 54, 65, 1) 0%,
-    rgba(43, 54, 65, 1) 0%,
-    rgba(43, 54, 65, 1) 30%,
-    rgb(173, 203, 241) 100%
-  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    to bottom,
+    rgb(255, 255, 255) 0%,
+    rgb(255, 255, 255) 0%,
+    rgb(255, 255, 255) 0%,
+    rgb(255, 255, 255) 30%,
+    rgb(255, 255, 255) 100%,
+
+  );/* /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#54d0dd', endColorstr='#54d0dd', GradientType=0 ); /* IE6-9 */
 }
 #about .about-text {
@@ -75,7 +76,7 @@ h3::selection {
 .btn-lg.focus,
 .btn-lg:active,
 .btn-lg.active {
-  color: #26f900;
+  color:  rgb(33, 139, 156);
   background-color: #414a52;
 }
 #about .btn-lg {
