--- a/src/assets/styles/home/HomeHdStyle.css
+++ b/src/assets/styles/home/HomeHdStyle.css
@@ -54,7 +54,7 @@ h3,
   padding: 14px 20px;
   margin: 0;
   font-size: 16px;
-  border-radius: 0;
+  border-radius: 10px;
   margin-top: 20px;
   transition: all 0.3s;
 }
@@ -63,7 +63,7 @@ h3,
 .btn-custom.focus,
 .btn-custom:active,
 .btn-custom.active {
-  color: #26f900;
+  color: rgb(33, 139, 156);
   background-color: #414a52;
 }
 #header .btn-default {
