--- a/src/assets/styles/home/HomeNavStyle.css
+++ b/src/assets/styles/home/HomeNavStyle.css
@@ -28,7 +28,7 @@
 }
 #menu.navbar-default .navbar-nav > li > a:hover {
   text-align: right;
-  color: #26f900;
+  color: #093f8b;
 }
 #menu .navbar-nav {
   margin: 7.5px -15px;
