--- a/src/assets/styles/indexmax/HeaderMaxS.css
+++ b/src/assets/styles/indexmax/HeaderMaxS.css
@@ -1,8 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+#headermax .my-text-T{
+  color: aliceblue;
+  font-family: "Montserrat", sans-serif;
+}
 #headermax .Header-Navbar-1{
     padding: 0;
     margin-top: 0;
-    position: relative ;
+    position: relative;
     z-index: 0 ;
+    
   }
   #headermax .my-text-T{
     position: absolute;
@@ -10,7 +16,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    font-display: swap
+    font-display: swap;
   }
   #headermax .image { 
     background-image:linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.3)), url(/images/bg_3.webp);
