--- a/src/assets/styles/indexmax/AboutMaxS.css
+++ b/src/assets/styles/indexmax/AboutMaxS.css
@@ -14,10 +14,11 @@
   justify-content: center;
 }
 .card {
-  height: 130px;
-  width: 130px;
-  margin: 8px;
-  background-color: #ffffff;
+  height: 130px !important;
+  width: 150px !important;
+  margin: auto;
+  margin-top: 25px;
+  background-color: #cccbcb !important;
   padding: 0;
   border: none;
 }
@@ -39,8 +40,8 @@
   color: rgb(255, 8, 8);
 }
 .my-icon-4 {
-  font-size: 50px;
-  margin: 5px;
+  font-size: 40px;
+  margin: 7 px;
   color: rgb(255, 251, 0);
 }
 .my-icon-5 {
@@ -58,10 +59,11 @@
   color: rgb(0, 0, 0);
 }
 .my-text {
-  text-align: left;
-  margin-left: 10%;
+  text-align: center;
   color: rgb(31, 121, 255);
   font-weight: bold;
+  font-size: 27px;
+
 }
 .my-textT {
   text-align: left;
@@ -79,5 +81,13 @@
 }
 .my-icon-share {
   color: rgb(31, 121, 255);
-  width: 40px
+  width: 50px
+}
+#buscador{
+  position: relative;
+  top: 50px;
+}
+#buttons{
+  position: relative;
+  top: 10px;
 }
