--- a/src/assets/styles/indexmax/ClassMaxS.css
+++ b/src/assets/styles/indexmax/ClassMaxS.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 .my-module {
   position: absolute;
   bottom: -100px;
@@ -6,6 +7,7 @@
   display: flex;
   justify-content: space-between;
   width: 80%;
+  
 }
 .my-text-block {
   background-color: white;
@@ -14,6 +16,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: 5px 5px 5px 0px #3d3d3d;
 }
 .my-text-block-1 {
   background-color: white;
@@ -22,6 +25,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  box-shadow: 5px 5px 5px 0px #3d3d3d;
 }
 #image-col {
   text-align: left;
@@ -70,4 +74,15 @@
 .my-icontT {
   transform: translate(-15px, 60px);
   color: rgb(248, 167, 45);
+}
+#texto{
+  position: relative;
+  left: -30px;
+  top: -20px;
+  font-family: "Montserrat","sans-serif";
+}
+#texto2{
+  position: relative;
+  top: -10px;
+  font-family: "Montserrat","sans-serif";
 }
