--- a/src/assets/styles/indexmax/FooterMaxS.css
+++ b/src/assets/styles/indexmax/FooterMaxS.css
@@ -1,24 +1,33 @@
 footer{
     background: #484a4d;
     color: rgba(247, 247, 247, 0.4);
+    justify-content: center;
+    align-items: center;
+    float: center;
+    min-width: 250px;
+}
+.p-4{
+    display: flex;
+    flex-wrap: wrap;
+    
 }
 #T-text{
-    text-align: left;
+    text-align: center;
     color: rgb(240, 248, 255);
-    position: relative;
-    left: 250px;
+    flex: 2;
+    min-width: 250px;
     /*margin: auto !important;*/
 }
 #T-text .T1{
-    max-width: 400px;
+
     color: rgb(255, 255, 255);
     position: relative;
     
     /*margin:auto !important;*/
 }
 #Text_container{
-    position: relative;
-    left: 250px;
+    flex: 2;
+    min-width: 250px;
 
 }
 #Text_container p{
@@ -40,8 +49,12 @@ footer{
 .copyright{
     position: relative;
     top:-10px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
-#p-4{
-    position: relative;
-    left: -170px
+.copyrightText1{
+    min-width: 250px;
 }
+
