--- a/src/assets/styles/loginForm.css
+++ b/src/assets/styles/loginForm.css
@@ -46,6 +46,9 @@
   background: linear-gradient(to right, #05363c, #007184);
   border-color: #1c484f;
   box-shadow:5px 5px 5px #05363c;
+  position: relative;
+  right: inherit;
+  right: 135px;
 }
 
 #login .form-label, #login .form-control {
@@ -116,7 +119,8 @@
 }
 
 #btndanger{
-  border-radius: 10px;
+  border-radius: 10px
+  
 }
 
 #facebook{
