--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@
   -webkit-text-size-adjust: 100%;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -27,8 +32,6 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  width: 0vh;
-  min-height: 0vh;
 }
 
 h1 {
