--- a/src/assets/styles/classes/ClassesForumsStyle.css
+++ b/src/assets/styles/classes/ClassesForumsStyle.css
@@ -55,8 +55,13 @@
     justify-content: center;
     align-items: center;
     height: 40vh;
+    
 }
 .TextBox{
     width: 80%;
     height: 200px;
+    outline: none;
+}
+.TextBox::placeholder{
+    color: #169;
 }
