--- a/src/assets/styles/CreateClass.css
+++ b/src/assets/styles/CreateClass.css
@@ -18,9 +18,25 @@
     display: none;
 }
 
+
+.ButtonsContainer{
+    display: flex;
+}
 .SubmitBtn{
     width: 100%;
+    margin: 5px;
 }
 .TextArea{
     resize: none;
+}
+.addModule{
+    width: 100%;
+    margin: 5px;
+}
+.DeleteModule{
+    width: 100%;
+}
+.Container-btn{
+    display: flex;
+    flex: 1;
 }
