--- a/src/assets/styles/classes/ClassesSNavStyle.css
+++ b/src/assets/styles/classes/ClassesSNavStyle.css
@@ -209,6 +209,8 @@
   height: calc(100% - 28px);
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
+  align-content: flex-start;
   overflow-y: scroll;
   padding: 0;
 }
