--- a/src/assets/styles/classes/ClassesSNavStyle.css
+++ b/src/assets/styles/classes/ClassesSNavStyle.css
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 #snav {
-  margin-right: 15px;
   padding: 1px 0px;
   box-sizing: border-box;
   /* font-family: "Poppins", sans-serif; */
@@ -44,7 +43,7 @@
   left: 0;
   height: 100%;
   width: 200px;
-  padding-top: 100px;
+  padding-top: 90px;
   background: var(--sidebar-color);
   transition: var(--tran-05);
   z-index: 100;
@@ -59,18 +58,16 @@
   /* list-style: none; */
   display: flex;
   align-items: center;
-  margin-top: 10px;
 }
 
 #snav .sidebar .module-number {
-  margin: 30px 0;
+  margin: 10px 0;
   padding: 0;
   color: var(--primary-color) !important;
 }
 
 #snav .sidebar.close .module-number {
   width: 40px;
-  margin-left: 10px;
   color: var(--primary-color);
 }
 
@@ -81,10 +78,6 @@
   align-items: center;
   justify-content: center;
   font-size: 20px;
-}
-
-#snav .sidebar .classIcon {
-  margin-left: 10px;
 }
 
 #snav .sidebar .text,
@@ -129,7 +122,6 @@
 
 #snav .sidebar .header .toggle {
   position: absolute;
-  top: 50%;
   transform: translateY(-63%) rotate(180deg);
   height: 40px;
   width: 20px;
@@ -205,17 +197,13 @@
 }
 
 #snav .sidebar .menu-bar {
-  
   height: calc(100% - 28px);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-content: flex-start;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 0;
-}
-#snav .menu-bar::-webkit-scrollbar {
-  display: none;
 }
 #snav .sidebar .menu-bar .mode {
   border-radius: 6px;
@@ -224,20 +212,6 @@
   transition: var(--tran-05);
 }
 
-#snav .home {
-  position: absolute;
-  top: 0;
-  left: 250px;
-  height: 100vh;
-  width: calc(100% - 250px);
-  background-color: var(--body-color);
-  transition: var(--tran-05);
-}
-#snav .sidebar.close ~ .home {
-  left: 78px;
-  height: 100vh;
-  width: calc(100% - 78px);
-}
 #snav body.dark .home .text {
   color: var(--text-color);
 }
