--- a/src/assets/styles/home/HomeNavStyle.css
+++ b/src/assets/styles/home/HomeNavStyle.css
@@ -24,7 +24,6 @@
   color: rgba(255, 255, 255, 0.7);
   font-size: 12px;
   letter-spacing: 1px;
-  margin-left: 30px;
 }
 #menu.navbar-default .navbar-nav > li > a:hover {
   text-align: right;
@@ -36,7 +35,13 @@
 #menu .navbar-nav > li > a {
   padding-top: 10px;
   padding-bottom: 10px;
-  margin-left: 40px;
+  margin-left: 25px;
   line-height: 20px;
   cursor: pointer;
+}
+
+.dropdown-menu.show{
+  position: relative;
+  background: #252525;
+  margin-top: 200px;
 }
